# LePhare

./: Cargo.toml  README.md  db.sqlite3  manage.py  package.json  requirements.txt
Dashboard/: forms.py  resources.py  urls.py  views.py
Dashboard/templates/dashboard/: base.html  books.html  history.html  index.html  lend-book.html  modals.html  news-detail.html  news.html  sitesettings.html  users.html
LePhare/: asgi.py  settings.py  urls.py  wsgi.py
MainApp/: admin.py  models.py  urls.py  views.py
MainApp/migrations/: 0001_initial.py  0002_book_category.py  0003_book_last_edited.py  0004_book_status.py  0005_alter_book_status.py  0006_alter_book_status.py  0007_aboutcomponents_galleryslideshow_message_news_and_more.py  0008_alter_message_options_sitesettings_email_and_more.py  0009_delete_galleryslideshow.py  0010_news_image.py  0011_rename_news_newsandevents.py  0012_rename_proffesion_readerprofile_proffession.py  0013_remove_book_image.py  0014_readerprofile_reader_id.py  0015_remove_book_publication_year_book_publisher.py  0016_alter_book_author_alter_book_language.py
MainApp/templates/: base.html  dashboard.html  footer.html  gallery.html  index.html  login.html  modals.html  news-detail.html  news.html  register.html  register2.html
MainApp/templates/books/: all_books.html  our_books.html
src/: main.rs
static/assets/css/: main.css  style.css
