[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde =  {version="1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version= "0.4", features=["serde"]}
uuid = {version=  "1.6", features=["v4","serde"]}
env_logger = "0.10"
log = "0.4"
tokio = {version="1", features =["full"]}